force-app/main/default/objects/Property_Owner__c/Property_Owner__c.object-meta.xml
<CustomObject>
    <label>Property Owner</label>
    <nameField>
        <displayFormat>PROW-{000000}</displayFormat>
        <label>Property Owner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Owner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>