force-app/main/default/objects/Property_Owner__c/fields/Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Owner_Address__c</fullName>
    <label>Owner Address</label>
    <type>TextArea</type>
</CustomField>