force-app/main/default/objects/Property_Owner__c/fields/Owner_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Owner_Mobile_No__c</fullName>
    <label>Owner Mobile No.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>