force-app/main/default/objects/Property_Owner__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>