force-app/main/default/objects/Property_Owner__c/fields/Owner_Photo__c.field-meta.xml
<CustomField>
    <fullName>Owner_Photo__c</fullName>
    <label>Owner Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>